Bug 516454 - HDMI monitor wakes from sleep immediately on the lock screen
Summary: HDMI monitor wakes from sleep immediately on the lock screen
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Power management & brightness (other bugs)
Version First Reported In: 6.6.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
: 516704 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-02-21 10:49 UTC by Graeme Gott
Modified: 2026-03-30 18:03 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Graeme Gott 2026-02-21 10:49:32 UTC
SUMMARY
My computer is set to turn the monitor off after a certain period of time, but it turns right back on again.

STEPS TO REPRODUCE
1. Enable monitor automatically shutting off in power management settings
2. Lock screen
3. Wait for monitor to turn off (or press escape to make it happen immediately)

OBSERVED RESULT
Monitor turns off then immediately turns back on again

EXPECTED RESULT
Monitor stays turned off

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.6.0
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2
Kernel Version: 6.18.9-arch1-2 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7800X3D 8-Core Processor
Memory: 64 GiB of RAM (62.0 GiB usable)
Graphics Processor: AMD Radeon RX 7900 XTX

ADDITIONAL INFORMATION
This bug happened before and was fixed, and now it is back. The monitor is hooked up through HDMI. A second computer with a monitor that is hooked up through DVI stays turned off.
Comment 1 Graeme Gott 2026-02-23 21:24:35 UTC
The monitor also turns back on immediately after shutting off when running "kscreen-doctor --dpms off".
Comment 2 Bug Janitor Service 2026-02-23 21:55:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8875
Comment 3 Zamundaaa 2026-02-24 15:44:30 UTC
Git commit cae4fd8758975f6cd585c9e6d911ec6fd828ce46 by Xaver Hugl.
Committed on 24/02/2026 at 11:11.
Pushed by zamundaaa into branch 'master'.

workspace: prevent the placeholder output from changing dpms mode

And add a test for it, so it doesn't regress again.

M  +35   -0    autotests/integration/outputchanges_test.cpp
M  +2    -0    src/backends/virtual/virtual_output.cpp
M  +2    -2    src/workspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/cae4fd8758975f6cd585c9e6d911ec6fd828ce46
Comment 4 Zamundaaa 2026-02-26 19:01:03 UTC
*** Bug 516704 has been marked as a duplicate of this bug. ***
Comment 5 Vlad Zahorodnii 2026-02-26 19:21:17 UTC
Git commit 5467e5456716c0b62bd0ec8184f39596943fdfd0 by Vlad Zahorodnii, on behalf of Xaver Hugl.
Committed on 26/02/2026 at 14:11.
Pushed by vladz into branch 'Plasma/6.6'.

workspace: prevent the placeholder output from changing dpms mode

And add a test for it, so it doesn't regress again.


(cherry picked from commit cae4fd8758975f6cd585c9e6d911ec6fd828ce46)

Co-authored-by: Xaver Hugl <xaver.hugl@kde.org>

M  +35   -0    autotests/integration/outputchanges_test.cpp
M  +2    -0    src/backends/virtual/virtual_output.cpp
M  +2    -2    src/workspace.cpp

https://invent.kde.org/plasma/kwin/-/commit/5467e5456716c0b62bd0ec8184f39596943fdfd0