workspace: prevent the placeholder output from changing dpms mode

And add a test for it, so it doesn't regress again.

BUG: 516454